# ownnest_solanaapp

./: Anchor.toml  README.md  package-lock.json
app/: package.json
app/.next/: trace
app/.next/server/: _error.js  pages-manifest.json
app/.next/server/pages/: _app.js  _error.js
app/.next/server/vendor-chunks/: @headlessui.js  next.js
app/.next/static/chunks/: _error.js  webpack.js
app/lib/: mongodb.js
app/models/: designers.js
app/src/: App.js
app/src/api/: registers.js
migrations/: deploy.ts
programs/ownnest_solanaapp/: Cargo.toml
programs/ownnest_solanaapp/src/: lib.rs
solana-target/: .rustc_info.json
solana-target/release/: anchor.d  avm.d  libavm.d
solana-target/release/.fingerprint/Inflector-c7cc41c82da2976b/: lib-inflector  lib-inflector.json
solana-target/release/.fingerprint/adler-3025db92121bf093/: lib-adler  lib-adler.json
solana-target/release/.fingerprint/aead-bc24062e998acf62/: lib-aead  lib-aead.json
solana-target/release/.fingerprint/aes-0eef8a65a9c235c0/: lib-aes  lib-aes.json
solana-target/release/.fingerprint/aes-gcm-siv-f573e49b20a56175/: lib-aes_gcm_siv  lib-aes_gcm_siv.json
solana-target/release/.fingerprint/ahash-15d8cc75d424dd43/: run-build-script-build-script-build  run-build-script-build-script-build.json
solana-target/release/.fingerprint/ahash-23abf74cc937fcf3/: build-script-build-script-build  build-script-build-script-build.json
solana-target/release/.fingerprint/ahash-76dd7e8e6db5cb67/: run-build-script-build-script-build  run-build-script-build-script-build.json
tests/: ownnest_solanaapp.ts
(+1215 files in other folders)
