[package]
name = "ownnest_solanaapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ownnest_solanaapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
ahash = "0.8.11"
anchor-lang = "0.30.1"
time = "0.3.34"
